2024.11.23. Reflected renaming of error message macros in _dzLinCOMatPrep. [dz_lin]
2024.11.12. Modified .gitignore. [all]
2024.11.11. Added const qualifiers to __ztk_prp_dzlin, __ztk_prp_dztf, __ztk_prp_dzsys, __ztk_prp_tag_dzco_sys, __ztk_prp_dzsys_mi, __ztk_prp_dzsys_limit, __ztk_prp_dzsys_p, __ztk_prp_dzsys_i, __ztk_prp_dzsys_d, __ztk_prp_dzsys_pid, __ztk_prp_dzsys_qpd, __ztk_prp_dzsys_fol, __ztk_prp_dzsys_sol, __ztk_prp_dzsys_pc, __ztk_prp_dzsys_adapt, __ztk_prp_dzsys_fg, __ztk_prp_dzsys_bw, and __ztk_prp_dzsys_maf. [dz_lin, dz_tf, dz_sys, dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_fg, dz_sys_filt_bw, dz_sys_filt_maf]
2024.11. 9. Defined ZTK_KEY_DZCO_LIN_A, ZTK_KEY_DZCO_LIN_B, ZTK_KEY_DZCO_LIN_C, ZTK_KEY_DZCO_LIN_D, ZTK_KEY_DZCO_TF_NUMERATOR, ZTK_KEY_DZCO_TF_DENOMINATOR, ZTK_KEY_DZCO_TF_ZERO, ZTK_KEY_DZCO_TF_POLE, ZTK_KEY_DZCO_TF_GAIN, ZTK_KEY_DZCO_SYS_NAME, ZTK_KEY_DZCO_SYS_TYPE, ZTK_KEY_DZCO_SYS_INPUTNUM, ZTK_KEY_DZCO_SYS_TIMECONSTANT, ZTK_KEY_DZCO_SYS_T1, ZTK_KEY_DZCO_SYS_T2, ZTK_KEY_DZCO_SYS_GAIN, ZTK_KEY_DZCO_SYS_PGAIN, ZTK_KEY_DZCO_SYS_IGAIN, ZTK_KEY_DZCO_SYS_DGAIN, ZTK_KEY_DZCO_SYS_DAMPING, ZTK_KEY_DZCO_SYS_BASE, ZTK_KEY_DZCO_SYS_QPD_EPS, ZTK_KEY_DZCO_SYS_LIMIT_MIN, ZTK_KEY_DZCO_SYS_LIMIT_MAX, ZTK_KEY_DZCO_SYS_FORGETTINGFACTOR, ZTK_KEY_DZCO_SYS_CUTOFFFREQ, ZTK_KEY_DZCO_SYS_DIM, ZTK_KEY_DZCO_SYS_FG_AMP, ZTK_KEY_DZCO_SYS_FG_DELAY, and ZTK_KEY_DZCO_SYS_FG_PERIOD as "a", "b", "c", "d", "num", "den", "zero", "pole", "gain", "name", "type", "in", "timeconstant", "t1", "t2", "gain", "pgain", "igain", "dgain", "damping", "base", "eps", "min", "max", "forgettingfactor", "cutofffrequency", "dim", "amp", "delay", and "period", respectively. [dz_lin, dz_tf, dz_sys, dz_sys_fg, dz_sys_misc, dz_sys_pid, dz_sys_lag, dz_sys_filt_bw, dz_sys_filt_maf]
2024.10.29. Renamed ZTK_TAG_DZSYS and ZTK_TAG_DZSYS_CONNECT to ZTK_TAG_DZCO_SYS and ZTK_TAG_DZCO_SYS_CONNECT, respectively. [dz_sys]