@@ -1,3 +1,3 @@
 PROJNAME=dzco
-VERSION=1.8.3
-DEPENDENCY="zeda=1.9.18;zm=1.9.2"
+VERSION=1.8.4
+DEPENDENCY="zeda=1.10.2;zm=1.10.1"
